compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__variables__blocks_are_scopes.snap
---
source: compiler-core/src/fsharp/tests/variables.rs
assertion_line: 99
expression: "\npub fn main() {\n  let x = 1\n  {\n    let x = 2\n  }\n  x\n}\n"
---
module rec my.mod
let main(): int = begin
    let x = 1
    do 
        let x = 2
        x
        ()
    x
end
