compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__variables__constant_variable_assignment.snap
---
source: compiler-core/src/fsharp/tests/variables.rs
assertion_line: 125
expression: "\nconst a = 3\n"
---
module rec my.mod
[<Literal>]
let a = 3
