compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__variables__discarded.snap
---
source: compiler-core/src/fsharp/tests/variables.rs
assertion_line: 57
expression: "pub fn go() {\n  let _r = 1\n  let _r = 2\n  Nil\n}"
---
module rec my.``mod``
let go(): unit = begin
    let _r = 1
    let _r = 2
    ()
end
