compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__variables__shadow_and_call.snap
---
source: compiler-core/src/fsharp/tests/variables.rs
expression: "\npub fn foo(x) {\n  fn(x) { x }(x)\n}\n"
---
module rec my.``mod``
let foo (x: 'u10): 'u10 = begin
    (fun(x: 'u10) -> begin x end) (x)
end
