compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__variables__shadow_let.snap
---
source: compiler-core/src/fsharp/tests/variables.rs
expression: "\npub fn go(a) {\n  case a {\n    99 -> {\n      let a = a\n      1\n    }\n    _ -> a\n  }\n}"
---
module rec my.``mod``
let go (a: int64) = begin
    match a with
    | 99L ->
        let a = a
        1L
    | _ ->
        a
end
