compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__variables__shadow_param.snap
---
source: compiler-core/src/fsharp/tests/variables.rs
assertion_line: 22
expression: "pub fn main(board) {\nfn(board) { board }\n  board\n}"
---
module rec my.``mod``
let main(board: 'u8): 'u8 = begin
    fun(board: 'u10) -> board 
    board
end
