compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__variables__shadow_pipe.snap
---
source: compiler-core/src/fsharp/tests/variables.rs
expression: "\npub fn foo(x) {\n  x\n  |> fn(x) { x }\n}\n"
---
module rec my.``mod``
let foo (x: 'u10): 'u10 = begin
    begin
        let _pipe = x
        ((fun(x: 'u10) -> begin x end) (_pipe))
    end
end
