compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__variables__simple_variable_assignment.snap
---
source: compiler-core/src/fsharp/tests/variables.rs
expression: "\npub fn foo() {\n  let a = 3\n}\n"
---
module rec my.``mod``
let foo () = begin
    let a = 3
    a
end
